# mikudb_project

./: .gitignore  Cargo.toml  README.md  build-windows.bat
crates/mikudb-boml/: Cargo.toml
crates/mikudb-boml/benches/: boml_bench.rs
crates/mikudb-boml/src/: bson.rs  codec.rs  de.rs  document.rs  json.rs  lib.rs  ser.rs  spec.rs  value.rs
crates/mikudb-cli/: Cargo.toml
crates/mikudb-cli/src/: cli.rs  client.rs  completer.rs  formatter.rs  help.rs  highlighter.rs  i18n.rs  lib.rs  main.rs  repl.rs
crates/mikudb-cluster/: Cargo.toml
crates/mikudb-cluster/src/: config.rs  error.rs  lib.rs  node.rs  raft.rs  replication.rs  router.rs
crates/mikudb-common/: Cargo.toml
crates/mikudb-common/src/: config.rs  error.rs  lib.rs  platform.rs  types.rs
crates/mikudb-core/: Cargo.toml
crates/mikudb-core/src/: builder.rs  client.rs  connection.rs  cursor.rs  database.rs  lib.rs  pipeline.rs  transaction.rs
crates/mikudb-query/: Cargo.toml
crates/mikudb-query/src/: ast.rs  executor.rs  filter.rs  index.rs  lexer.rs  lib.rs  parser.rs  planner.rs
crates/mikudb-server/: Cargo.toml
crates/mikudb-server/src/: auth.rs  config.rs  handler.rs  lib.rs  main.rs  network.rs  openeuler.rs  protocol.rs  server.rs  session.rs  tls.rs
crates/mikudb-storage/: Cargo.toml
crates/mikudb-storage/src/: cache.rs  collection.rs  compaction.rs  engine.rs  fulltext.rs  index.rs  lib.rs  recovery.rs  wal.rs
docs/: INSTALLATION.md  MQL-GUIDE.md
examples/: cluster-node.toml  server-tls.toml
scripts/: install-linux.sh  install-openeuler.sh  install-windows.ps1  install.sh
scripts/openeuler/: install.sh  tune-kernel.sh
systemd/: mikudb-openeuler.service  mikudb.service
