[workspace]
resolver = "2"
members = [
    "crates/mikudb-core",
    "crates/mikudb-boml",
    "crates/mikudb-storage",
    "crates/mikudb-query",
    "crates/mikudb-common",
    "crates/mikudb-server",
    "crates/mikudb-cli", "crates/mikudb-cluster",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
license = "GNU"
repository = "https://github.com/mikudb/mikudb"
authors = ["MikuDB Team"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
bincode = "2.0.1"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Storage engine - using RocksDB for LSM-tree (battle-tested, OpenEuler compatible)
rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }

# Compression (OpenEuler optimized)
lz4 = "1.24"
zstd = { version = "0.13", features = ["zstdmt", "legacy"] }

# Hashing and crypto
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }
blake3 = "1.5"
sha2 = "0.10"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }

# Decimal
rust_decimal = { version = "1.33", features = ["serde"] }

# Regex
regex = "1.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Concurrency
parking_lot = "0.12"
crossbeam = "0.8"
dashmap = "6.1.0"

# Memory management
bytes = "1.5"
memmap2 = "0.9"

# Indexing - using tantivy for full-text search
tantivy = "0.25.0"

# Geo-spatial
geo = "0.32.0"
rstar = "0.12"

# Testing
criterion = "0.8.1"
tempfile = "3.9"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-openeuler]
inherits = "release"
# OpenEuler specific optimizations
# Enable native CPU optimizations for better performance on OpenEuler's supported architectures
# x86_64, aarch64 (Kunpeng), etc.
