[package]
name = "mikudb-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MikuDB CLI - Interactive command-line client with syntax highlighting"

[[bin]]
name = "mikudb-cli"
path = "src/main.rs"

[dependencies]
mikudb-common = { path = "../mikudb-common" }
mikudb-boml = { path = "../mikudb-boml" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

clap = { version = "4.4", features = ["derive", "env"] }
rustyline = { version = "14.0", features = ["derive"] }
rustyline-derive = "0.10"
colored = "2.1"
tabled = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
# regex = { workspace = true }
dirs = "5.0"

unicode-width = "0.1"
regex = "1"
once_cell = "1"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["term"] }

[features]
default = []

[dev-dependencies]
tempfile = { workspace = true }
